--- a/landing page/style.css
+++ b/landing page/style.css
@@ -21,47 +21,24 @@ body {
     height: 100vh;
     text-align: center;
     background-color: var(--background-color);
-    padding: 0.1rem;
 }
 
-
-/* .header{
-    border: 1px solid black;
-} */
-
 .header-content {
-    max-width: 1280px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    height: 70px;
+    overflow: hidden;
 }
-
-.logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* Aligns items horizontally in the center */
-    font-size: 2rem;
-    /* You can adjust this to fit your design */
-    font-weight: bold;
-    color: var(--text-color);
-    text-decoration: none;
-    gap: 1rem;
-    /* Increased gap between elements */
-    padding: 0.5rem;
-    /* Adds space around the logo */
+.admin{
+    display: block;
 }
 
 .logo-icon {
-    height: 5.875rem;
-    width: 1.938rem;
-}
-
-.logo-text {
-    font-size: 2rem;
-    font-weight: bold;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    background-color: none;
 }
 
 .nav {
@@ -80,14 +57,16 @@ body {
     font-size: 1.125rem;
     font-weight: 600;
     transform: color 0.1s;
+    transition: color 0.1s ease;
 }
 
 .nav-link:hover {
     color: var(--link-color);
+    text-decoration: underline;
 }
 
-.contact-button {
-    display: none;
+.contact-button{
+    display: block;
     border: none;
     border-radius: 0.375rem;
     background-color: var(--primary-color);
@@ -96,6 +75,7 @@ body {
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     font-weight: 600;
+    margin-right: 50px;
 }
 
 @media screen and (min-width:768px) {
@@ -132,15 +112,19 @@ body {
 .main-section {
     max-width: 1280px;
     display: flex;
-    flex-direction: column;
     gap: 2rem;
     padding: 0.6rem;
     align-items: center;
-    margin: 0 auto;
 }
-
+.content-right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 .content-left {
     text-align: center;
+    margin-left: 20px;
     animation: slideFromLeft 1s ease forwards;
     opacity: 0;
 }
@@ -181,14 +165,13 @@ body {
     align-items: center;
     justify-content: center;
 }
-
 .start-button,
 .tour-button {
     border: none;
     border-radius: 0.375rem;
     background-color: var(--primary-color);
     color: var(--background-color);
-    transform: all 0.1s;
+    transform: all 0.2s;
     padding: 0.75rem 1.5rem;
     font-size: 1rem;
     font-weight: 600;
@@ -206,11 +189,7 @@ body {
     background-color: var(--gray);
 }
 
-.content-right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 
 .image-container {
     border: none;
@@ -218,6 +197,20 @@ body {
     overflow: hidden;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     height: 50vh;
+    opacity: 0;
+    transition: all 0.3s linear;
+    animation: slideFromRight 1s ease forwards;
+    
+}
+@keyframes slideFromRight {
+    0% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 .section-image {
@@ -344,10 +337,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #6d7890;
     padding: 1.6rem;
     border-radius: 1rem;
     gap: 1rem;
+    transition: all 0.3s ease;
+
+}
+.feature-card:hover{
+    box-shadow: 2px 2px 4px black, -2px -2px 4px gray ;
 }
 
 .feature-info {
@@ -358,17 +355,21 @@ body {
 
 .icon-container {
     background-color: var(--background-color);
-    height: 3rem;
-    width: 3rem;
+    height: 4rem;
+    width: 4rem;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
-
+.scale:hover{
+    transform: scale(1.9);
+}
 .feature-svg {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 100%;
+    height: 100%;
+    transition: all 0.3s linear;
 }
 
 .feature-title {
@@ -379,30 +380,6 @@ body {
 
 .feature-description {
     color: white;
-}
-
-.feature-card:nth-child(1) {
-    background-color: #4a90e2;
-}
-
-.feature-card:nth-child(2) {
-    background-color: #FF6289;
-}
-
-.feature-card:nth-child(3) {
-    background-color: #fcbf58;
-}
-
-.feature-card:nth-child(4) {
-    background-color: #44bfc3;
-}
-
-.feature-card:nth-child(5) {
-    background-color: #77b05d;
-}
-
-.feature-card:nth-child(6) {
-    background-color: #7d78b1;
 }
 
 @media screen and (max-width:768px) {
