--- a/FeedBack Form/feedback.css
+++ b/FeedBack Form/feedback.css
@@ -24,7 +24,7 @@ body {
 }
 
 .feedback-container h1 {
-    color: #007bff;
+    color: #6366F1;
     margin-bottom: 10px;
 }
 
@@ -86,7 +86,7 @@ body {
 }
 
 .submit-btn {
-    background-color: #007bff;
+    background-color: #6366F1;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -97,7 +97,7 @@ body {
 }
 
 .submit-btn:hover {
-    background-color: #0056b3;
+    background-color: #5254f8;
 }
 
 
