--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
 }
 
 .logo-icon {
-    width: 70px;
-    height: 70px;
+    width: 90px;
+    height: 90px;
     object-fit: cover;
 }
 
@@ -714,6 +714,7 @@ body {
         font-size: 2.5rem;
     }
 }
+/* footer  */
 
 .footer-container {
     background-color: var(--background-color);
@@ -736,6 +737,7 @@ body {
 .footer-top {
     width: 34%;
     display: flex;
+    align-items: center;
     flex-direction: column;
     gap: 1.65rem;
 }
@@ -762,8 +764,8 @@ body {
 }
 
 .social-icon {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 1.9rem;
+    height: 1.9rem;
 }
 
 .filler-text {
@@ -824,7 +826,11 @@ ul {
         align-items: center;
     }
     .footer-top {
-        padding-left: 10rem;
+        align-items: center;
+        padding: 5px;
+    }
+    .filler-text{
+        padding: 0px 19px;
     }
     .footer-grid {
         align-self: center;
@@ -833,10 +839,18 @@ ul {
 }
 
 @media screen and (max-width:850px) {
-    .footer-top {
-        padding-left: 1rem;
+    
+    .filler-text{
+        padding-right: 10px;
     }
     .footer-grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width:500px) {
+
+    .footer-grid {
+        grid-template-columns: repeat(1, 1fr);
     }
 }
