--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
     color: #007BFF;
 }
 
+
 #profile {
     font-size: 1.4rem;
     margin: 0 7px;
@@ -80,54 +81,72 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
-
 /* Hamburger Menu */
 .hamburger {
     display: none;
     font-size: 1.5rem;
     cursor: pointer;
 }
+.nav-logo-icon{
+    display: none;
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+}
 
 /* Responsive Styles */
 
 /* Tablets and Smaller Devices */
 @media screen and (max-width: 768px) {
+   .header-content{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+   }
     .nav {
-        display: none; /* Hide navigation links initially */
+        display: none; 
         flex-direction: column;
-        position: absolute;
-        top: 70px;
-        right: 0;
-        background-color: #fff;
-        width: 100%;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-        padding: 1rem 0;
+        align-items: center;
         text-align: center;
+        position: absolute;
+        background-color: white;
+        top: 70px;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        padding: 1rem 0;
+        animation: animate 0.4s ease;
         gap: 1rem;
         z-index: 10;
     }
-
-    .nav.active {
-        display: flex; /* Show navigation when active */
+    .logo-icon {
+        display: none;
     }
-
-    .hamburger {
+    .nav-logo-icon{
         display: block;
     }
-
-    #profileButtonContainer {
-        margin-right: 10px;
+   
+   .header-content .fa-solid{
+    display: block;
+    margin-right: 90%;
+   }
+  
+    @keyframes animate {
+        from{
+            left: -50%;
+        }
+        to{
+            left: 0;
+        }
+    }
+    .nav.active {
+        display: flex; 
     }
 }
 
 /* Mobile Devices */
 @media screen and (max-width: 480px) {
-    .logo-icon {
-        width: 50px;
-        height: 50px;
-    }
-
+   
     #loginButton {
         padding: 6px 12px;
         font-size: 0.8rem;
@@ -141,6 +160,12 @@ body {
         height: 60px;
         padding: 0 1rem;
     }
+    .header-content .fa-solid{
+        display: block;
+        margin-right: 80%;
+       }
+    
+  
 }
 
 .nav-link:hover {
