--- a/style.css
+++ b/style.css
@@ -79,6 +79,9 @@ body {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+.admin{
+    display: none;
+}
 /* Hamburger Menu */
 .hamburger {
     display: none;
@@ -113,7 +116,7 @@ body {
         width: 100%;
         height: 100vh;
         padding: 1rem 0;
-        animation: animate 0.3s linear;
+        animation: animate 0.4s linear;
         gap: 1rem;
         z-index: 10;
     }
