--- a/register.css
+++ b/register.css
@@ -118,6 +118,18 @@ body {
     max-width: 400px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s linear;
+    animation: animate 0.3s ease;
+    text-transform: capitalize;
+}
+@keyframes animate {
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }to{
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 
