--- a/vote Now/vote.css
+++ b/vote Now/vote.css
@@ -90,3 +90,68 @@ header h2{
         margin-top: 0.5rem;
     }
 }
+
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* Popup box styling */
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s linear;
+    animation: animate 0.3s ease;
+    text-transform: capitalize;
+}
+@keyframes animate {
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+
+/* OK button styling */
+
+.popup-content button {
+    background-color: #6366F1;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.popup-content button:hover {
+    background-color: #4c51bf;
+}
+
+
+/* Media query for responsiveness */
+
+@media (max-width: 600px) {
+    .popup-content {
+        width: 80%;
+    }
+}
